@@ -31,7 +31,7 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
 
-import org.apache.commons.collections.map.ListOrderedMap;
+import org.apache.commons.collections4.map.ListOrderedMap;
 import org.apache.ddlutils.DdlUtilsException;
 import org.apache.ddlutils.Platform;
 import org.apache.ddlutils.model.Column;
@@ -318,11 +318,11 @@ public class OracleModelReader extends JdbcModelReader {
 
       while (rs.next()) {
         values.put("INDEX_NAME", rs.getString(1));
-        values.put("INDEX_TYPE", new Short(DatabaseMetaData.tableIndexOther));
+        values.put("INDEX_TYPE", Short.valueOf(DatabaseMetaData.tableIndexOther));
         values.put("NON_UNIQUE",
             "UNIQUE".equalsIgnoreCase(rs.getString(3)) ? Boolean.FALSE : Boolean.TRUE);
         values.put("COLUMN_NAME", rs.getString(4));
-        values.put("ORDINAL_POSITION", new Short(rs.getShort(5)));
+        values.put("ORDINAL_POSITION", Short.valueOf(rs.getShort(5)));
 
         readIndex(metaData, values, indices);
       }
